crates/rekindle-client/tests/ui/fail/web_module_without_feature.rs
fn main() {
    let _ = rekindle_client::web::run;
}
